--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.1.5"
+    "@fortawesome/fontawesome-free": "^6.2.0",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "astro": "^1.1.5",
+    "sass": "^1.54.8"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^1.0.0"
   }
 }
