--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "astro": "^1.1.5",
-    "sass": "^1.54.8"
+    "sass": "^1.54.8",
+    "sweetalert2": "^11.4.30"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^1.0.0"
